--- a/f2.html
+++ b/f2.html
@@ -3,219 +3,129 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Citroën Alpine - F2</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      color: white;
-    }
-
-    header {
-      background-color: #001f3f;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: white;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    header h1 {
-      font-size: 1.2rem;
-      margin: 0;
-    }
-
-    nav {
-      display: flex;
-      gap: 15px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .menu-toggle {
-      display: none;
-      font-size: 1.5rem;
-      cursor: pointer;
-    }
-
-    .logo {
-      max-width: 70px;
-      margin-right: 10px;
-    }
-
-    .content {
-      padding: 20px;
-      text-align: center;
-    }
-
-    .equipo-resumen {
-      background: #001f3f;
-      padding: 20px;
-      border-radius: 10px;
-      margin: 20px auto;
-      max-width: 800px;
-    }
-
-    .pilotos {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .piloto {
-      background: #001f3f;
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-      color: white;
-    }
-
-    .piloto img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      border-radius: 10px;
-    }
-
-    .piloto h3 {
-      margin: 10px 0 5px;
-    }
-
-    .bandera {
-      font-size: 1.5rem;
-    }
-
-    .trofeos {
-      margin-top: 40px;
-    }
-
-    .trofeos h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .trofeo-lista {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-    }
-
-    .trofeo {
-      background: #001f3f;
-      padding: 15px;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-        flex-direction: column;
-        background: #001f3f;
-        position: absolute;
-        top: 60px;
-        right: 0;
-        width: 200px;
-        padding: 10px;
-      }
-
-      nav.active {
-        display: flex;
-      }
-
-      .menu-toggle {
-        display: block;
-      }
-
-      .logo {
-        max-width: 50px;
-      }
-    }
-  </style>
+  <title>Citroën Alpine F2</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
 </head>
-<body>
-  <header>
-    <div style="display:flex; align-items:center;">
-      <img src="https://i.imgur.com/qvAoPOr.jpeg" alt="Logo F2" class="logo">
-      <h1>Citroën Alpine - F2</h1>
-    </div>
-    <div class="menu-toggle">☰</div>
+<body class="bg-gray-100 text-gray-900 font-sans">
+
+  <!-- Menú superior -->
+  <header class="bg-blue-900 text-white p-4 flex justify-between items-center">
+    <h1 class="text-lg font-bold">Alpine Academy</h1>
     <nav>
-      <a href="index.html">Inicio</a>
-      <a href="f1.html">F1</a>
-      <a href="f2.html">F2</a>
-      <a href="f3.html">F3</a>
-      <a href="f4.html">F4</a>
-      <a href="f5.html">F5</a>
-      <a href="k6.html">K6</a>
-      <a href="historia.html">Historia</a>
+      <ul class="hidden md:flex space-x-6">
+        <li><a href="index.html" class="hover:text-gray-300">Inicio</a></li>
+        <li><a href="f1.html" class="hover:text-gray-300">F1</a></li>
+        <li><a href="f2.html" class="hover:text-gray-300">F2</a></li>
+        <li><a href="f3.html" class="hover:text-gray-300">F3</a></li>
+        <li><a href="f4.html" class="hover:text-gray-300">F4</a></li>
+        <li><a href="f5.html" class="hover:text-gray-300">F5</a></li>
+        <li><a href="k6.html" class="hover:text-gray-300">K6</a></li>
+      </ul>
+      <!-- Menú hamburguesa móvil -->
+      <div class="md:hidden">
+        <button id="menu-btn" class="focus:outline-none">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+              d="M4 6h16M4 12h16M4 18h16"/>
+          </svg>
+        </button>
+      </div>
     </nav>
   </header>
 
-  <div class="content">
-    <div class="equipo-resumen">
-      <h2>Resumen del Equipo</h2>
-      <p>
-        El equipo <strong>Citroën Alpine</strong>, ha logrado múltiples éxitos en la categoría y enviado a múltiples pilotos a F1, dando prueba de su calidad como academia.
-      </p>
-    </div>
-
-    <h2>Pilotos Titulares</h2>
-    <div class="pilotos">
-      <div class="piloto">
-        <img src="https://i.imgur.com/Nsw57er.jpeg" alt="Victor Yanacon">
-        <h3>Victor Yanacon</h3>
-        <p>Argentina 🇦🇷</p>
-      </div>
-      <div class="piloto">
-        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Raul de Leon">
-        <h3>Raúl de León</h3>
-        <p>México 🇲🇽</p>
-      </div>
-      <div class="piloto">
-        <img src="https://i.imgur.com/bpOU2LQ.jpeg" alt="Angelo Lemus">
-        <h3>Angelo Lemus</h3>
-        <p>México 🇲🇽</p>
-      </div>
-      <div class="piloto">
-        <img src="https://i.imgur.com/cifqFkx.jpeg" alt="Renato Gaspar">
-        <h3>Renato Gaspar</h3>
-        <p>Brasil 🇧🇷</p>
-      </div>
-    </div>
-
-    <div class="trofeos">
-      <h2>Trofeos Históricos F2</h2>
-      <div class="trofeo-lista">
-        <div class="trofeo">T47 - Copa Pistón F2 - Carlos Vázquez</div>
-        <div class="trofeo">T56 - Copa Pistón F2 - Diolys Pedroza</div>
-        <div class="trofeo">T56 - WDC F2 - Diolys Pedroza</div>
-        <div class="trofeo">T57 - Copa Pistón F2 - Luis Rentería</div>
-        <div class="trofeo">T62 - Conference League - Citroën Alpine</div>
-        <div class="trofeo">T67 - Constructores F2 - Alpine</div>
-      </div>
-    </div>
+  <!-- Menú móvil -->
+  <div id="menu" class="hidden md:hidden bg-blue-800 text-white p-4 space-y-2">
+    <a href="index.html" class="block">Inicio</a>
+    <a href="f1.html" class="block">F1</a>
+    <a href="f2.html" class="block">F2</a>
+    <a href="f3.html" class="block">F3</a>
+    <a href="f4.html" class="block">F4</a>
+    <a href="f5.html" class="block">F5</a>
+    <a href="k6.html" class="block">K6</a>
   </div>
 
+  <!-- Sección principal -->
+  <main class="max-w-6xl mx-auto p-6">
+    <!-- Logo y título -->
+    <div class="flex items-center space-x-4 mb-8">
+      <img src="https://i.imgur.com/qvAoPOr.jpeg" alt="Logo F2" class="w-20 h-20 rounded-lg shadow-lg">
+      <h2 class="text-3xl font-bold text-blue-900">Citroën Alpine F2</h2>
+    </div>
+
+    <!-- Texto del equipo -->
+    <p class="text-lg mb-10 leading-relaxed text-gray-800">
+      El equipo <b>Citroën Alpine</b>, ha logrado múltiples éxitos en la categoría y enviado a múltiples pilotos a F1, 
+      dando prueba de su calidad como academia.
+    </p>
+
+    <!-- Trofeos -->
+    <section class="trophies bg-blue-900 text-white p-6 rounded-2xl shadow-lg mb-12">
+      <h2 class="text-2xl font-bold mb-4">🏆 Trofeos Históricos F2</h2>
+
+      <h3 class="font-semibold">Constructores</h3>
+      <p>🏆 1 Campeonato (T67)</p>
+
+      <h3 class="font-semibold">Pilotos</h3>
+      <p>🏆 1 Campeonato (T56)</p>
+
+      <h3 class="font-semibold">Copas Internacionales</h3>
+      <p>🏆 1 Conference League (T62)</p>
+
+      <h3 class="font-semibold">Otros Logros</h3>
+      <p>⭐ Múltiples Copas Pistón y podios</p>
+    </section>
+
+    <!-- Pilotos -->
+    <h2 class="text-2xl font-bold mb-6 text-blue-900">👨‍✈️ Pilotos Titulares</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
+      
+      <!-- Victor Yanacon -->
+      <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/Nsw57er.jpeg" alt="Victor Yanacon" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold">Victor Yanacon</h3>
+        <p>🇦🇷 Argentina</p>
+      </div>
+
+      <!-- Raul de Leon -->
+      <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/iZvs6Sq.jpeg" alt="Raul de Leon" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold">Raul de Leon</h3>
+        <p>🇲🇽 México</p>
+      </div>
+
+      <!-- Angelo Lemus -->
+      <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/bpOU2LQ.jpeg" alt="Angelo Lemus" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold">Angelo Lemus</h3>
+        <p>🇲🇽 México</p>
+      </div>
+
+      <!-- Renato Gaspar -->
+      <div class="bg-blue-900 text-white p-4 rounded-xl shadow-lg text-center">
+        <img src="https://i.imgur.com/cifqFkx.jpeg" alt="Renato Gaspar" class="w-32 h-32 object-cover rounded-full mx-auto mb-3 border-4 border-white">
+        <h3 class="font-bold">Renato Gaspar</h3>
+        <p>🇧🇷 Brasil</p>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-blue-900 text-white p-4 text-center mt-12">
+    <p>© 2025 Citroën Alpine F2 - Alpine Academy</p>
+  </footer>
+
   <script>
-    const toggle = document.querySelector('.menu-toggle');
-    const nav = document.querySelector('nav');
-    toggle.addEventListener('click', () => {
-      nav.classList.toggle('active');
+    // Menú hamburguesa
+    const btn = document.getElementById('menu-btn');
+    const menu = document.getElementById('menu');
+    btn.addEventListener('click', () => {
+      menu.classList.toggle('hidden');
     });
+
+    // Animaciones ScrollReveal
+    ScrollReveal().reveal('.trophies', { delay: 200, distance: '50px', origin: 'bottom' });
+    ScrollReveal().reveal('.grid > div', { interval: 200, distance: '50px', origin: 'bottom' });
   </script>
 </body>
 </html>
